# gen/http/account/server/types.go
@@ -1,0 +1,28 @@
+// Code generated by goa v3.0.3, DO NOT EDIT.
+//
+// account HTTP server types
+//
+// Command:
+// $ goa gen calcsvc/design
+
+package server
+
+import (
+	account "calcsvc/gen/account"
+)
+
+// SigninUnauthorizedResponseBody is the type of the "account" service "signin"
+// endpoint HTTP response body for the "unauthorized" error.
+type SigninUnauthorizedResponseBody string
+
+// NewSigninUnauthorizedResponseBody builds the HTTP response body from the
+// result of the "signin" endpoint of the "account" service.
+func NewSigninUnauthorizedResponseBody(res account.Unauthorized) SigninUnauthorizedResponseBody {
+	body := SigninUnauthorizedResponseBody(res)
+	return body
+}
+
+// NewSigninPayload builds a account service signin endpoint payload.
+func NewSigninPayload() *account.SigninPayload {
+	return &account.SigninPayload{}
+}
